kubernetes/prod/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaming-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gaming-backend
  template:
    metadata:
      labels:
        app: gaming-backend
    spec:
      containers:
        - name: backend
          image: achinit99/gaming-backend:v1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 4000 # NestJS port
