kubernetes/prod/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaming-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gaming-frontend
  template:
    metadata:
      labels:
        app: gaming-frontend
    spec:
      containers:
      - name: frontend
        image: achinit99/gaming-frontend:v1.0.10
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # Nginx
