kubernetes/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming-backend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: gaming-backend
