kubernetes/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming-frontend-service
spec:
  selector:
    app: gaming-frontend 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000 
  type: LoadBalancer
