kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaming-platform-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: remnantborn.live
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gaming-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gaming-frontend-service
            port:
              number: 80
